--- a/hyClient/CMakeLists.txt
+++ b/hyClient/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-project ("hyServer")
+project ("hyClient")
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -13,6 +13,6 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_DEBUG} /MT")
 include_directories("../../../boost/boost_1_80_0" "../include")
 link_directories("../../../boost/boost_1_80_0/stage/lib")
 
-add_executable (hyServer hyServer.cpp)
+add_executable (hyClient hyClient.cpp)
 
 # TODO: 如有需要，请添加测试并安装目标。
